objects/ASI_KOR_WS_Stock_In_Trade_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_End_Stock_9L__c</fullName>
        <formula>ASI_KOR_Item_Group_Code__r.ASI_CRM_Fixed_Conversion_Rate__c * ASI_KOR_WS_SIT_End_Stock__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Stock (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_KR_HeaderID_Upload__c</fullName>
        <label>HeaderID(Upload)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Item_Group_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group Code</label>
        <referenceTo>ASI_KOR_Item_Group__c</referenceTo>
        <relationshipLabel>Stock-In Trade Details</relationshipLabel>
        <relationshipName>Stock_In_Trade_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Item_Group_Name__c</fullName>
        <formula>ASI_KOR_Item_Group_Code__r.ASI_KOR_Item_Group_Name__c</formula>
        <label>Item Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Name_Kor__c</fullName>
        <label>Name-Kor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SIT_Report_Branch_Name__c</fullName>
        <formula>CreatedBy.ASI_KOR_User_Branch_Name__c</formula>
        <label>SIT Report - Branch Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SIT_Report_Brand__c</fullName>
        <formula>ASI_KOR_Item_Group_Code__r.ASI_KOR_Sub_Brand__r.ASI_KOR_Brand__r.Name</formula>
        <label>SIT Report - Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SIT_Report_Customer_Name__c</fullName>
        <formula>Stock_In_Trade__r.ASI_KOR_Wholesaler__r.ASI_KOR_Customer_Code__c + &quot;  &quot; + Stock_In_Trade__r.ASI_KOR_Wholesaler__r.ASI_KOR_Name_Korean__c</formula>
        <label>SIT Report - Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SIT_Report_Region_Name__c</fullName>
        <formula>CreatedBy.ASI_KOR_User_Region_Name__c</formula>
        <label>SIT Report - Region Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SIT_Report_Sub_brand__c</fullName>
        <formula>ASI_KOR_Item_Group_Code__r.ASI_KOR_Sub_Brand__r.Name</formula>
        <label>SIT Report - Sub-brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_FILTER_SUB_BRAND__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for filtering input box when adding new product</description>
        <label>SYS_FILTER_SUB_BRAND</label>
        <referenceTo>ASI_KOR_Sub_Brand__c</referenceTo>
        <relationshipLabel>SYS Stock-In Trade Details</relationshipLabel>
        <relationshipName>ASI_KOR_SYS_FilterStock_In_Trade_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_Header_ID__c</fullName>
        <formula>Stock_In_Trade__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS_Header_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_HEADER_CUS_CODE__c</fullName>
        <formula>Stock_In_Trade__r.ASI_KOR_Wholesaler__r.ASI_KOR_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS_INFO_HEADER_CUS_CODE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_Header_Period__c</fullName>
        <formula>Stock_In_Trade__r.ASI_KOR_SYS_Period_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS_INFO_Header_Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_ITEM_GROUP_CODE__c</fullName>
        <formula>ASI_KOR_Item_Group_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS_INFO_ITEM_GROUP_CODE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_SIT_End_Stock__c</fullName>
        <label>End Stock (Case)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_WS_SIT_LastMonthEndingStock__c</fullName>
        <label>Last Month&apos;s Ending Stock (Case)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_In_Trade__c</fullName>
        <label>Stock-In Trade</label>
        <referenceTo>ASI_KOR_Stock_In_Trade__c</referenceTo>
        <relationshipLabel>Stock-In Trade Details</relationshipLabel>
        <relationshipName>Stock_In_Trade_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Stock-In Trade Detail</label>
    <nameField>
        <displayFormat>SITD-{00000000}</displayFormat>
        <label>Stock-In Trade Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock-In Trade Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_KOR_Disallow_SIT_Item_Edit</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT( Stock_In_Trade__r.ASI_KOR_Status__c  ) &lt;&gt; &quot;Editable&quot; &amp;&amp; $Profile.Name &lt;&gt; &quot;ASI KOR System Administrator&quot; &amp;&amp; $Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp; $Profile.Name &lt;&gt; &quot;ASI KOR Business Dev Admin&quot;</errorConditionFormula>
        <errorMessage>The Stock In Trade Item cannot be edited because the Stock In trade Entry status has already been set to Locked.</errorMessage>
    </validationRules>
</CustomObject>